--- a/web_service/src/pages/Home.css
+++ b/web_service/src/pages/Home.css
@@ -60,6 +60,9 @@
     font-size: 24px;
     font-weight: 400;
   }
+  .my-title h2{
+    color: #636262;
+  }
   .my-tournaments-section h2{
     font-size: 24px;
   }
@@ -76,9 +79,7 @@
     
   }
 
-  .my-tournaments-list{
-    gap:100px;
-  }
+  
 
   .tournaments-banner {
     text-align: center;
@@ -107,7 +108,6 @@
     margin-bottom: 10px; /* если нужно отступить от заголовка */
   } 
   @media (max-width: 480px) {
-    
   .home-header h1 {
     font-size: 50px;
     font-weight: 300;
