--- a/web_service/src/components/MyTournamentCard/MyTournamentCardActive.css
+++ b/web_service/src/components/MyTournamentCard/MyTournamentCardActive.css
@@ -1,4 +1,3 @@
-
 /* Контейнер карточки, задающий общую стилизацию */
 .my-tournament-card-active {
   display: flex;
@@ -75,18 +74,16 @@
   font-size: 11px;
   margin-bottom: 0;
 }
-.my-tournament-status.win  {
-  color: #ffffff;
-  background: linear-gradient(#89D55F, #36865E);
-}
+
+
+/* Открытый или Закрытый - новый красивый градиент */
 .my-tournament-status.open{
   color: #ffffff;
-  background: linear-gradient(#4C40EF, #36865E);
+  background: linear-gradient(to right, #4C40EF, #09968f);
 }
-
-.my-tournament-status.lose, .my-tournament-status.closed {
+.my-tournament-status.close {
   color: #ffffff;
-  background: linear-gradient(#cf5555, #851717);
+  background: linear-gradient(to right, #4C40EF, #f86e44);
 }
 
 /* Дата турнира */
@@ -96,15 +93,12 @@
   color: #8B8B8B;
 }
 
-/* Подвал карточки */
-.my-tournament-footer {
+/* Блок mode и date в одной линии */
+.mode-and-date-active {
   display: flex;
   justify-content: space-between;
-  align-items: start;
-  margin-top: 6px;
+  align-items: center;
   width: 100%;
-  font-size: 12px;
-  color: #8B8B8B;
 }
 
 /* Адаптация под мобильные */
@@ -153,8 +147,7 @@
     font-weight: 400;
   }
 
-  .my-tournament-footer {
+  .mode-and-date-active {
     font-size: 10px;
-    margin-top: 0px;
   }
 }
