--- a/web_service/src/components/TournamentCard/TournamentCard.css
+++ b/web_service/src/components/TournamentCard/TournamentCard.css
@@ -52,14 +52,27 @@
 }
 
 /* Статус (правый верхний угол) */
+/* Статус (правый верхний угол) */
 .status-badge {
-  background-color: #5142CF;
   color: white;
   margin-left: 7px;
   border-radius: 7px;
   font-size: 12px;
   font-weight: 300;
+  padding: 4px 10px;
+  text-align: center;
 }
+
+/* Стили для открытых турниров */
+.status-badge.open {
+  background: linear-gradient(to right, #4C40EF, #36865E);
+}
+
+/* Стили для закрытых турниров */
+.status-badge.closed {
+  background: linear-gradient(to right, #4C40EF, #f86e44);
+}
+
 
 
 .mode-label {
